# hometeam_project

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
aws/: ecs-task-definition.json
src/hometeamproj/: config.ini  config.py  main.py
src/hometeamproj/pipeline/: README.md  detector.py  frame_reader.py  output_writer.py  queue_manager.py  viewport_worker.py
